--- a/style/custom.css
+++ b/style/custom.css
@@ -30,7 +30,7 @@ p {
 /*link colors */
 a:link,
 a:visited, .tabtree .tabrow0 li a  {
-    color: #469dcd;
+    color: #0070A8;
     text-decoration: none;
 }
 
@@ -80,7 +80,7 @@ a:focus {
 }
 
 #page-header-wrapper {
-	background: rgba(0, 55, 69, 0.85);
+	background: #285D77;
 	padding: 20px 0px 25px;
 }
 
@@ -179,7 +179,7 @@ a:focus {
 }
 
 #page-footer a {
-    color: #70f083;
+    color: #469DCD;
 }
 
 .footer-share {
@@ -325,7 +325,7 @@ a:focus {
 	font-size: 15px;
     padding-top: 0;
     text-align: right;
-    color: #70f083;
+    color: #FFFFFF;
 	font-weight: 600;
 	position: absolute;
 	top: -5px;
@@ -333,7 +333,7 @@ a:focus {
 }
 
 #page-header .socials a {
-	color: #70f083;
+	color: #469DCD;
 }
 
 #intro.generalbox {
@@ -371,7 +371,7 @@ div.redirectmessage {
 
 /*buttons */
 input[type="submit"], input[type="button"], #searchform_button, a.submit, #accessibility_controls #block_accessibility_launchtoolbar {
-		background: #5cb85c !important;
+		background: #469DCC !important;
        
      border: 0px;
 	 -webkit-border-radius: 0px;
@@ -383,7 +383,7 @@ input[type="submit"], input[type="button"], #searchform_button, a.submit, #acces
         cursor: pointer;    
         font-weight: 600;
         padding: 7px 25px 8px;
-        box-shadow: 0 -1.3px 0 0 rgba(0, 0, 0, 0.1) inset;
+        box-shadow: 0 -1.9px 0 0 rgba(0, 0, 0, 0.2) inset;
         -webkit-transition: background .2s ease-out;
            -moz-transition: background .2s ease-out;
             -ie-transition: background .2s ease-out;
