add logos and play with footer

--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -11,3 +11,18 @@
     text-align: center;
     padding-bottom: 5px;
 }
+
+//change background color for top footer
+.footer-top{
+  background: #FFF;
+}
+
+//change background color for bottom footer
+.footer-bottom{
+  background: #7B7D82;
+}
+
+//change font color in footer to white
+.saylor-footer.container-fluid {
+  color: #FFF;
+}
