fix sizing of footer cards

--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -13,8 +13,8 @@
 }
 
 //change background color for top footer
-.footer-top{
-  background: #FFF;
+.footer-share-card{
+  background: #5fc0dd;
 }
 
 //change background color for bottom footer
