--- a/templates/saylor_footer.mustache
+++ b/templates/saylor_footer.mustache
@@ -1,6 +1,6 @@
-<div class="saylor-footer container-fluid">
-
-    <div class="saylor-footer footer-top">
+<footer id="page-footer" class="p-y-1 bg-light">
+  <div class="saylor-footer footer-share-card container-fluid">
+    <div class="saylor-footer footer-share-card">
         <div class="col-xs-12 col-sm-3 float-left">
 
             <div class="footer-logo" align="center">
@@ -9,37 +9,53 @@
 
         </div>
 
-    <div class="footer-share row" align="center">
-        <a title="Facebook | /SaylorFoundation" target="_blank" href="https://www.facebook.com/SaylorFoundation" class="fa fa-facebook fa-3x"></a>
-        <a title="Twitter | @saylordotorg" target="_blank" href="https://twitter.com/saylordotorg" class="fa fa-twitter fa-3x"></a>
-        <a title="Instagram | @saylordotorg" target="_blank" href="https://www.instagram.com/saylordotorg" class="fa fa-instagram fa-3x"></a>
-        <a title="GitHub | /saylordotorg" target="_blank" href="https://github.com/saylordotorg" class="fa fa-github fa-3x"></a>
-    </div>
+        <div class="footer-share row" align="center">
+            <a title="Facebook | /SaylorFoundation" target="_blank" href="https://www.facebook.com/SaylorFoundation" class="fa fa-facebook fa-3x"></a>
+            <a title="Twitter | @saylordotorg" target="_blank" href="https://twitter.com/saylordotorg" class="fa fa-twitter fa-3x"></a>
+            <a title="Instagram | @saylordotorg" target="_blank" href="https://www.instagram.com/saylordotorg" class="fa fa-instagram fa-3x"></a>
+            <a title="GitHub | /saylordotorg" target="_blank" href="https://github.com/saylordotorg" class="fa fa-github fa-3x"></a>
+        </div>
 
-        <div class="col-xs-12 col-sm-9 pull-right">
-            <div class="footer-link-list" align="center">
-                <ul class="footer-nav list-inline" >
-                    <li class="list-inline-item"><h4><a href="https://saylor.org/about">About</a></h4></li>
-                    <li class="list-inline-item"><h4><a href="https://saylor.org/become-our-partner">Partner</a></h4></li>
-                    <li class="list-inline-item"><h4><a href="https://www.saylor.org/blog">Blog</a></h4></li>
-                    <li class="list-inline-item"><h4><a href="https://saylor.org/contact">Contact</a></h4></li>
-                </ul>
+            <div class="col-xs-12 col-sm-9 pull-right">
+                <div class="footer-link-list" align="center">
+                    <ul class="footer-nav list-inline" >
+                        <li class="list-inline-item"><h4><a href="https://saylor.org/about">About</a></h4></li>
+                        <li class="list-inline-item"><h4><a href="https://saylor.org/become-our-partner">Partner</a></h4></li>
+                        <li class="list-inline-item"><h4><a href="https://www.saylor.org/blog">Blog</a></h4></li>
+                        <li class="list-inline-item"><h4><a href="https://saylor.org/contact">Contact</a></h4></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-
     </div>
-
-    <div class="saylor-footer footer-bottom p-y-1">
-        <div class="col-xs-12 col-sm-9 pull-right">
-            <div class="footer-text">
-                <p><a href="http://creativecommons.org/licenses/by/3.0/" rel="license"><img src="{{{ccby}}}" style="border-width:0" alt="Creative Commons License"></a></p>
-                <p>© Saylor Academy 2010{{#currentyear}}-{{currentyear}}{{/currentyear}} except as otherwise noted. Excluding course final exams, content authored by Saylor Academy is available under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Unported</a> license. Third-party materials are the copyright of their respective owners and shared under various licenses. See <a href="https://www.saylor.org/open/licensinginformation" target="_blank">detailed licensing information</a>.</p>
-                <p>Saylor Academy and Saylor.org® are trade names of the Constitution Foundation, a 501(c)(3) organization through which our educational activities are conducted.</p>
-            </div>
-        </div>
-
-        <div align="center">
-            <p><h5><a href="https://www.saylor.org/sitemap">Sitemap</a> | <a href="https://www.saylor.org/terms-of-use">Terms of Use</a> | <a href="https://www.saylor.org/privacy-policy">Privacy Policy</a></h5></p>
-        </div>
   </div>
-</div>
+
+      <div class="saylor-footer container-fluid">
+
+        <div class="container">
+            <div id="course-footer">{{{ output.course_footer }}}</div>
+
+            {{# output.page_doc_link }}
+                <p class="helplink">{{{ output.page_doc_link }}}</p>
+            {{/ output.page_doc_link }}
+        </div>
+
+        <div class="saylor-footer footer-bottom p-y-1">
+            <div class="col-xs-12 col-sm-9 pull-right">
+                <div class="footer-text">
+                    <p><a href="http://creativecommons.org/licenses/by/3.0/" rel="license"><img src="{{{ccby}}}" style="border-width:0" alt="Creative Commons License"></a></p>
+                    <p>© Saylor Academy 2010{{#currentyear}}-{{currentyear}}{{/currentyear}} except as otherwise noted. Excluding course final exams, content authored by Saylor Academy is available under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Unported</a> license. Third-party materials are the copyright of their respective owners and shared under various licenses. See <a href="https://www.saylor.org/open/licensinginformation" target="_blank">detailed licensing information</a>.</p>
+                    <p>Saylor Academy and Saylor.org® are trade names of the Constitution Foundation, a 501(c)(3) organization through which our educational activities are conducted.</p>
+                </div>
+            </div>
+
+            <div align="center">
+                <p><h5><a href="https://www.saylor.org/sitemap">Sitemap</a> | <a href="https://www.saylor.org/terms-of-use">Terms of Use</a> | <a href="https://www.saylor.org/privacy-policy">Privacy Policy</a></h5></p>
+            </div>
+      </div>
+    </div>
+
+
+    {{{ output.standard_footer_html }}}
+    {{{ output.standard_end_of_body_html }}}
+    </div>
+</footer>
