--- a/scss/preset/default.scss
+++ b/scss/preset/default.scss
@@ -54,6 +54,9 @@ $expand-orange-700:     #f77504 !default;
 $expand-orange-800:     #f16505 !default;
 $expand-orange-900:     #e84806 !default;
 
+// orange background color for buttons same as orange 800
+$button-bg-orange: #f16505 !default;
+
 $expand-dark-blue-50:    #e2f0fe !default;
 $expand-dark-blue-100:   #c2d9e7 !default;
 $expand-dark-blue-200:   #a3bed0 !default;
