--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -1,2 +1,14 @@
 // https://docs.moodle.org/dev/Creating_a_theme_based_on_boost#Why_do_we_use_pre_and_post_SCSS.3F
 // Pre SCSS for the theme.
+
+// Increase font size for user log in/sign up top-right header. */
+.usermenu {
+    font-size: 1.2em;
+}
+
+// Change height, margin and padding to logo
+.navbar-brand img {
+  height: 45px;
+  margin-top: -4px;
+  padding-bottom: 2px;
+}
