--- a/scss/preset/default.scss
+++ b/scss/preset/default.scss
@@ -231,6 +231,16 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+
+// Button fill and rounded corners
+
+.btn-primary {
+    background-color: $button-bg-orange;
+    border: none;
+    border-radius: 6px;
+}
+
+
 .filemanager-container,
 .filepicker-filelist {
     @extend .border;
