--- a/scss/preset/default.scss
+++ b/scss/preset/default.scss
@@ -203,6 +203,7 @@ $breadcrumb-margin-bottom:          0 !default;
 $breadcrumb-bg:                     transparent !default;
 $breadcrumb-divider: "/" !default;
 $breadcrumb-divider-rtl: "/" !default;
+$breadcrumb-last-color: $button-bg-orange;
 
 // Alerts
 $alert-border-width:                0 !default;
